--- a/rpc/haberdasher/BUILD.bazel
+++ b/rpc/haberdasher/BUILD.bazel
@@ -1,7 +1,7 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
-    name = "go_default_library",
+    name = "haberdasher_go_proto",
     srcs = [
         "service.pb.go",
         "service.twirp.go",
@@ -13,5 +13,8 @@ go_library(
         "//vendor/github.com/golang/protobuf/proto:go_default_library",
         "//vendor/github.com/twitchtv/twirp:go_default_library",
         "//vendor/github.com/twitchtv/twirp/ctxsetters:go_default_library",
+    ],
+    compilers = [
+        "@io_bazel_rules_go//proto:go_proto",
     ],
 )
