try to use local workspace in haberdasher

--- a/rpc/haberdasher/BUILD.bazel
+++ b/rpc/haberdasher/BUILD.bazel
@@ -1,4 +1,3 @@
-# gazelle:ignore
 load("@io_bazel_rules_go//proto:compiler.bzl", "go_proto_compiler")
 load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
 
@@ -17,7 +16,7 @@ go_proto_library(
     proto = ":haberdasher_proto",
     visibility = ["//visibility:public"],
     compilers = [
-        "twirp_library"
+        "twirp_library",
     ],
 )
 
@@ -27,12 +26,6 @@ go_proto_compiler(
         "twirp_out=.",
         "go_out=.",
     ],
-    deps = [
-#        "//vendor/github.com/golang/protobuf/proto:go_default_library",
-#        "//vendor/github.com/twitch/twirp:go_default_library",
-    ],
-#    plugin = "@com_github_golang_protobuf//protoc-gen-go",
-    plugin = "@com_github_twitchtv_twirp//protoc-gen-twirp",
-#    plugin = "@com_github_grpc_ecosystem_grpc_gateway//protoc-gen-grpc-gateway",
+    plugin = "@com_github_twitchtv_twirp//:go_default_library",
     visibility = ["//visibility:public"],
 )
